<resources>
    <string name="app_name">What Now News</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="enter_your_email_address_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email address and we\'ll send you a link to reset your password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="verification_sent_message">A verification link has been sent to your email address. Please click the link to verify your account and proceed to Home.</string>
    <string name="go_to_login">Go to Login</string>
    <string name="check_verification_status">Check Verification Status</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="use_different_email">Use Different Email</string>
    <string name="resend_in">Resend in %1$ds</string>
    <string name="email_verified_success">Email verified successfully!</string>
    <string name="email_not_verified">Email is not verified yet. Please check your inbox.</string>
    <string name="verification_email_sent">Verification email sent successfully!</string>
    <string name="email_not_verified_login">Your email is not verified. Please verify your email first.</string>
    <string name="categories">Categories</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="settings">Settings</string>
    <string name="country">Country</string>
    <string name="united_states">United States</string>
    <string name="egypt">Egypt</string>
    <string name="germany">Germany</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="is_dark_mode">is Dark Mode</string>
</resources>